<resources xmlns:tools="http://schemas.android.com/tools" xmlns:moz="http://schemas.android.com/apk/res-auto">
    <string name="mozac_feature_addons_permissions_privacy_description">Read and modify privacy settings</string>
    <string name="mozac_feature_addons_permissions_all_urls_description">Access your data for all websites</string>
    <string name="mozac_feature_addons_permissions_one_site_description">Access your data for %1$s</string>
    <string name="mozac_feature_addons_permissions_sites_in_domain_description">Access your data for sites in the %1$s domain</string>
    <string name="mozac_feature_addons_permissions_one_extra_site_description" tools:ignore="PluralsCandidate">Access your data on 1 other site</string>
    <string name="mozac_feature_addons_permissions_extra_sites_description" tools:ignore="PluralsCandidate">Access your data on %1$d other sites</string>
    <string name="mozac_feature_addons_permissions_one_extra_domain_description" tools:ignore="PluralsCandidate">Access your data on 1 other domain</string>
    <string name="mozac_feature_addons_permissions_extra_domains_description_plural" tools:ignore="PluralsCandidate">Access your data on %1$d other domains</string>
    <string name="mozac_feature_addons_permissions_content_description_item">%1$s, %2$d of %3$d</string>
    <string name="mozac_feature_addons_permissions_tabs_description">Access browser tabs</string>
    <string name="mozac_feature_addons_permissions_unlimited_storage_description">Store unlimited amount of client-side data</string>
    <string name="mozac_feature_addons_permissions_web_navigation_description">Access browser activity during navigation</string>
    <string name="mozac_feature_addons_permissions_bookmarks_description">Read and modify bookmarks</string>
    <string name="mozac_feature_addons_permissions_browser_setting_description">Read and modify browser settings</string>
    <string name="mozac_feature_addons_permissions_browser_data_description">Clear recent browsing history, cookies, and related data</string>
    <string name="mozac_feature_addons_permissions_clipboard_read_description">Get data from the clipboard</string>
    <string name="mozac_feature_addons_permissions_clipboard_write_description">Input data to the clipboard</string>
    <string name="mozac_feature_addons_permissions_declarative_net_request_description">Block content on any page</string>
    <string name="mozac_feature_addons_permissions_declarative_net_request_feedback_description">Read your browsing history</string>
    <string name="mozac_feature_addons_permissions_downloads_description">Download files and read and modify the browser’s download history</string>
    <string name="mozac_feature_addons_permissions_downloads_open_description">Open files downloaded to your device</string>
    <string name="mozac_feature_addons_permissions_find_description">Read the text of all open tabs</string>
    <string name="mozac_feature_addons_permissions_geolocation_description">Access your location</string>
    <string name="mozac_feature_addons_permissions_history_description">Access browsing history</string>
    <string name="mozac_feature_addons_permissions_management_description">Monitor extension usage and manage themes</string>
    <string name="mozac_feature_addons_permissions_native_messaging_description">Exchange messages with apps other than this one</string>
    <string name="mozac_feature_addons_permissions_notifications_description">Display notifications to you</string>
    <string name="mozac_feature_addons_permissions_pkcs11_description">Provide cryptographic authentication services</string>
    <string name="mozac_feature_addons_permissions_proxy_description">Control browser proxy settings</string>
    <string name="mozac_feature_addons_permissions_sessions_description">Access recently closed tabs</string>
    <string name="mozac_feature_addons_permissions_tab_hide_description">Hide and show browser tabs</string>
    <string name="mozac_feature_addons_permissions_top_sites_description">Access browsing history</string>
    <string name="mozac_feature_addons_permissions_devtools_description">Extend developer tools to access your data in open tabs</string>
    <string name="mozac_feature_addons_version">Version</string>
    <string name="mozac_feature_addons_author">Author</string>
    <string name="mozac_feature_addons_authors" moz:removedIn="123" tools:ignore="UnusedResources">Authors</string>
    <string name="mozac_feature_addons_last_updated">Last updated</string>
    <string name="mozac_feature_addons_home_page">Homepage</string>
    <string name="mozac_feature_addons_learn_more">Learn more about permissions</string>
    <string name="mozac_feature_addons_rating">Rating</string>
    <string name="mozac_feature_addons_more_info_link" moz:removedIn="126" tools:ignore="UnusedResources">More about this add-on</string>
    <string name="mozac_feature_addons_more_info_link_2">More about this extension</string>
    <string name="mozac_feature_addons_settings">Settings</string>
    <string name="mozac_feature_addons_settings_on">On</string>
    <string name="mozac_feature_addons_settings_off" moz:removedIn="125" tools:ignore="UnusedResources">Off</string>
    <string name="mozac_feature_addons_settings_allow_in_private_browsing">Allow in private browsing</string>
    <string name="mozac_feature_addons_settings_run_in_private_browsing">Run in private browsing</string>
    <string name="mozac_feature_addons_not_allowed_in_private_browsing">Not allowed in private windows</string>
    <string name="mozac_feature_addons_enabled">Enabled</string>
    <string name="mozac_feature_addons_disabled" moz:removedIn="125" tools:ignore="UnusedResources">Disabled</string>
    <string name="mozac_feature_addons_installed_section">Installed</string>
    <string name="mozac_feature_addons_recommended_section">Recommended</string>
    <string name="mozac_feature_addons_unsupported_section">Not yet supported</string>
    <string name="mozac_feature_addons_unavailable_section">Not yet available</string>
    <string name="mozac_feature_addons_disabled_section">Disabled</string>
    <string name="mozac_feature_addons_details">Details</string>
    <string name="mozac_feature_addons_permissions">Permissions</string>
    <string name="mozac_feature_addons_remove">Remove</string>
    <string name="mozac_feature_addons_report">Report</string>
    <string name="mozac_feature_addons_permissions_dialog_title">Add %1$s?</string>
    <string name="mozac_feature_addons_optional_permissions_dialog_title">%1$s requests additional permissions.</string>
    <string name="mozac_feature_addons_permissions_dialog_subtitle">It requires your permission to:</string>
    <string name="mozac_feature_addons_optional_permissions_dialog_subtitle">It wants to:</string>
    <string name="mozac_feature_addons_permissions_dialog_add">Add</string>
    <string name="mozac_feature_addons_permissions_dialog_allow">Allow</string>
    <string name="mozac_feature_addons_permissions_dialog_deny">Deny</string>
    <string name="mozac_feature_addons_permissions_dialog_cancel">Cancel</string>
    <string name="mozac_feature_addons_install_addon_content_description" tools:ignore="UnusedResources" moz:removedIn="124">Install Add-on</string>
    <string name="mozac_feature_addons_install_addon_content_description_2">Install %1$s</string>
    <string name="mozac_feature_addons_install_addon_dialog_cancel">Cancel</string>
    <string name="mozac_feature_addons_user_rating_count_2">Reviews: %1$s</string>
    <string name="mozac_feature_addons_rating_content_description" moz:removedIn="124" tools:ignore="UnusedResources">%1$.02f/5</string>
    <string name="mozac_feature_addons_rating_content_description_2">Rating: %1$.02f out of 5</string>
    <string name="mozac_feature_addons_addons">Add-ons</string>
    <string name="mozac_feature_addons_addons_manager">Add-ons Manager</string>
    <string name="mozac_feature_addons_manager_notification_title_text" moz:removedIn="126" tools:ignore="UnusedResources">Add-ons are temporarily disabled</string>
    <string name="mozac_feature_extensions_manager_notification_title_text">Extensions are temporarily disabled</string>
    <string name="mozac_feature_addons_manager_notification_content_text" moz:removedIn="126" tools:ignore="UnusedResources">One or more add-ons stopped working, making your system unstable.</string>
    <string name="mozac_feature_extensions_manager_notification_content_text">One or more extensions stopped working, making your system unstable.</string>
    <string name="mozac_feature_addons_manager_notification_restart_button" moz:removedIn="126" tools:ignore="UnusedResources">Restart add-ons</string>
    <string name="mozac_feature_extensions_manager_notification_restart_button">Restart extensions</string>
    <string name="mozac_feature_addons_find_more_addons_button_text" moz:removedIn="126" tools:ignore="UnusedResources">Find more add-ons</string>
    <string name="mozac_feature_addons_find_more_extensions_button_text">Find more extensions</string>
    <string name="mozac_feature_addons_updater_notification_allow_button">Allow</string>
    <string name="mozac_feature_addons_updater_notification_deny_button">Deny</string>
    <string name="mozac_feature_addons_updater_notification_title">%1$s has a new update</string>
    <string name="mozac_feature_addons_updater_notification_content" tools:ignore="PluralsCandidate">%1$d new permissions are required</string>
    <string name="mozac_feature_addons_updater_notification_content_singular">A new permission is required</string>
    <string name="mozac_feature_addons_updater_notification_channel" moz:removedIn="126" tools:ignore="UnusedResources">Add-on updates</string>
    <string name="mozac_feature_addons_updater_notification_channel_2">Extension updates</string>
    <string name="mozac_feature_addons_supported_checker_notification_channel" tools:ignore="UnusedResources">Supported add-ons checker</string>
    <string name="mozac_feature_addons_supported_checker_notification_title" tools:ignore="UnusedResources">New add-on available</string>
    <string name="mozac_feature_addons_supported_checker_notification_title_plural" tools:ignore="UnusedResources">New add-ons available</string>
    <string name="mozac_feature_addons_supported_checker_notification_content_one">Add %1$s to %2$s</string>
    <string name="mozac_feature_addons_supported_checker_notification_content_two">Add %1$s and %2$s to %3$s</string>
    <string name="mozac_feature_addons_supported_checker_notification_content_more_than_two">Add them to %1$s</string>
    <string name="mozac_feature_addons_not_yet_supported_caption" moz:removedIn="126" tools:ignore="UnusedResources">Firefox add-on technology is modernizing. These add-ons use frameworks that are not compatible with Firefox 75 &amp; beyond.</string>
    <string name="mozac_feature_addons_not_yet_supported_caption2">We‘re currently building support for an initial selection of Recommended Extensions.</string>
    <string name="mozac_add_on_install_progress_caption" moz:removedIn="126" tools:ignore="UnusedResources">Downloading and verifying add-on&#8230;</string>
    <string name="mozac_extension_install_progress_caption">Downloading and verifying extension&#8230;</string>
    <string name="mozac_feature_addons_failed_to_query_add_ons" moz:removedIn="126" tools:ignore="UnusedResources">Failed to query Add-ons!</string>
    <string name="mozac_feature_addons_failed_to_query_extensions">Failed to query Extensions!</string>
    <string name="mozac_feature_addons_installed_dialog_title">%1$s has been added to %2$s</string>
    <string name="mozac_feature_addons_installed_dialog_description" moz:removedIn="124" tools:ignore="UnusedResources">Open it in the menu</string>
    <string name="mozac_feature_addons_installed_dialog_okay_button" moz:removedIn="124" tools:ignore="UnusedResources">Okay, Got it</string>
</resources>