<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:windowBackground"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/mozac_ic_extensions" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/icon"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:layout_toEndOf="@id/icon"
        android:paddingStart="5dp"
        android:paddingTop="4dp"
        android:paddingEnd="5dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        tools:text="@string/mozac_feature_addons_installed_dialog_title"
        tools:textColor="#000000" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignStart="@id/title"
        android:layout_marginTop="16dp"
        android:paddingStart="5dp"
        android:paddingTop="4dp"
        android:paddingEnd="5dp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/mozac_feature_addons_installed_dialog_description" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/description"
        android:layout_below="@id/title"
        android:layout_marginTop="16dp"
        app:tint="?android:attr/textColorPrimary"
        app:srcCompat="@drawable/mozac_ic_menu"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/allow_in_private_browsing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_alignStart="@id/title"
        android:layout_marginTop="16dp"
        android:paddingStart="5dp"
        android:paddingTop="4dp"
        android:paddingEnd="5dp"
        android:text="@string/mozac_feature_addons_settings_allow_in_private_browsing"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/allow_in_private_browsing"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/mozac_feature_addons_installed_dialog_okay_button"
        android:textAllCaps="false" />

</RelativeLayout>